css/styles.css
@font-face {
  font-family: 'Odibee Sans';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/odibeesans/v4/neIPzCSooYAho6WvjeToRbk1cJA.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 16px;
}

/* background source credit: https://unsplash.com/photos/ZhQCZjr9fHo */

body {
  background-image: url('../images/background-bw.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  height: 100vh;
  padding: 0 2em;
  /* overflow: hidden; */
}

.background-bw {
  /* border: 2px solid red; */
  background-image: url('../images/background.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  background-clip: border-box;
  /* height: 100vh; */
}

main {
  width: 100%;
}

@media only screen and (min-width: 1197px) {
  body {
    width: 1197px;
    margin: 0 auto;
  }
}

.navbar {
  /* background: center left / 50% url('../images/Alpha logo 3.png') no-repeat; */
  background: 50px center / 25em url('../images/logo\ short.png') no-repeat;
  width: 100%;
  height: 100px;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
}

.navbar-backing {
  background-color: rgba(255, 255, 255, 0.75);
  z-index: 999;
}

.navlist {
  display: inline;
  margin-bottom: 15px;
}

.navitem {
  display: inline;
  padding: 0.2em 1em;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-size: 1rem;
  font-weight: bold;
  border: 1px solid rgba(0, 0, 0, 0);
  transition: all 0.3s;
  text-transform: uppercase;
}

.navbar a {
  color: inherit;
  text-decoration: none;
  transition: all 0.2s;
}

.navitem:hover,
.navitem.active {
  color: white;
  /* border: 1px solid rgba(255, 255, 255, 100); */
  text-shadow: 0 0 5px black;
}

.highlight {
  text-shadow: 0 0 5px red;
}

/* .section-what-we-do { */
section {
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  font-family: 'Odibee Sans', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
  font-size: 2em;
  position: absolute;
  top: -2000px;
  transition: all 0.5s;
  padding: 3rem 50px;
  /* padding-top: 3rem; */
  /* opacity: 0; */
}

section.display {
  position: relative;
  top: 0;
  opacity: 1;
}

section h1 {
  margin-bottom: 1rem;
}

.section-what-weve-done .flex-container {
  height: 1280px;
  display: flex;
  flex-flow: column wrap;
  align-items: center;
}

.section-what-weve-done .card {
  width: 30%;
  margin: 1rem 1rem;
  flex-grow: 1;
  /* border: 2px solid red; */
  display: flex;
  flex-flow: column nowrap;
  border: 1px solid rgba(255, 255, 255, 0);
  /* box-shadow: 0 0 5px rgba(255, 255, 255, 0); */
  transition: all 0.2s;
}

.section-what-weve-done .card:hover {
  box-shadow: 0 0 10px rgba(255, 255, 255, 1);
  border: 1px solid rgba(255, 255, 255, 1);
}

.section-what-weve-done .card-img {
  /* border: 2px solid red; */
  width: 100%;
  max-width: 100%;
  flex-grow: 1;
}

.section-what-weve-done .card-desc {
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-size: 1rem;
  background-color: rgba(0, 0, 0, 0.5);
  padding: 0.5em;
  flex-grow: 0;
}

.section-what-weve-done .card-desc h6 {
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-size: 1.5rem;
}

.card-img img {
  width: 100%;
  height: 100%;
  padding-bottom: 0;
  object-fit: fill;
  display: block;
}

.section-what-we-do * {
  /* border: 2px solid red; */
  width: 100%;
}

.section-what-we-do h6 {
  margin-bottom: 2rem;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

.section-what-we-do .container {
  display: grid;
  /* grid: column repeat(2, 1fr) / repeat(3, 1fr); */
  grid-template: 233px 1fr / 1fr 1fr 1fr;
  /* grid-template-columns: 1fr 1fr 1fr; */
  /* grid-template-rows: 1fr 2fr; */
  grid-auto-flow: column;
  gap: 0 20px;
  min-width: 0;
  min-height: 0;
}

.section-what-we-do .thumbnail-pic img {
  /* object-fit: contain; */
  width: 100%;
  height: 100%;
}

.section-what-we-do .thumbnail-pic {
  width: 100%;
  height: 100%;
}

.section-what-we-do .thumbnail-label {
  /* border: 2px solid blueviolet; */
  z-index: 5;
  padding: 0.2rem 0.4rem;
  position: absolute;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
}

.section-what-we-do .thumbnail {
  grid-column: auto;
  grid-row: auto;
  position: relative;
  display: flex;
  align-items: flex-end;
  /* border: 2px solid red; */
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.section-what-we-do .writeup {
  /* border: 2px solid blue; */
  grid-column: auto;
  grid-row: auto;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-size: 0.5em;
  padding: 0.4rem;
  background-color: rgba(0, 0, 0, 0.5);
}

.section-about-us .container {
  display: flex;
  flex-flow: row nowrap;
  width: 100%;
}

.section-about-us .aboutus-img {
  display: flex;
  flex-flow: row nowrap;
  align-items: flex-end;
  grid-template: 1fr / 1fr;
  border: 1rem solid black;
  margin-right: 2rem;
  position: relative;
}

.section-about-us .caption {
  z-index: 5;
  position: absolute;
  left: 0;
  padding: 0.2em 0.5em 0 0;
  font-size: 2em;
  background-color:black;
}

.section-about-us .aboutus-desc {
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-size: 1rem;
  padding: 1rem;
  background-color: rgba(0, 0, 0, 1);
  line-height: 1.5rem;
}

.section-about-us .aboutus-desc p {
  margin-top: 1rem;
}

.section-about-us img {
  width: 100%;
  height: 100%;
  /* object-fit: cover; */
}

